# starwit-awareness-engine

./: .gitignore  README.md  docker-compose.yml  object-detector.settings.yaml  video-source-2.settings.yaml
.github/workflows/: create-sae-release.yaml  helm-sae-release.yml
dashboards/: redis_writer.json  sae_overview.json  sae_timescale_sample.json  video_source.json
demo/: .env  demo.py  docker-compose.yml  object-detector.settings.yaml  object-tracker-1.settings.yaml  object-tracker-2.settings.yaml  requirements.txt  video-source-1.settings.yaml  video-source-2.settings.yaml  video-source-stream.settings.yaml
demo/anomaly-detector/: anomaly-detector.settings.yaml
demo/object-detector/: object-detector.settings.yaml
demo/object-tracker/: object-tracker-1.settings.yaml
demo/streaming-server/: mediamtx.yml
demo/video-source-py/: video-source-1.settings.yaml  video-source-2.settings.yaml  video-source-stream.settings.yaml  video-source-stream1.settings.yaml
doc/: README.md  database.md  performance.md  usage-scenarios.md
doc/geo-coordinate-transformation/: README.md  geoCoordinatesTrasformation.md
doc/installation/: Installation.md
docker-compose/: .env  .env.template  README.md  docker-compose-was.yml  docker-compose-with-anomalies.yml  docker-compose-with-anomaly.yml  docker-compose-with-backend-valkey.yml  docker-compose-with-db.yml  docker-compose-with-geo-merger.yml  docker-compose-with-sec-redis.yml  docker-compose-with-sec-valkey.yml  docker-compose.yml  requirements.txt  set_local_git_creds.sh
docker-compose/aggregator/: aggregator-was.settings.yaml
docker-compose/anomaly-detector/: anomaly-detector.settings.yaml
docker-compose/anomaly-post-processing/: anomaly-post-processing.settings.yaml
docker-compose/api/: api.settings.yaml
docker-compose/database-writer/: .env
docker-compose/geo-mapper/: geo-mapper-was.settings.yaml  geo-mapper.settings.yaml
docker-compose/geo-merger/: geo-merger.settings.yaml
docker-compose/object-detector/: object-detector-was.settings.yaml  object-detector.settings.yaml
docker-compose/object-tracker/: object-tracker-stream1.settings.yaml
docker-compose/pgadmin/: servers-config.json
docker-compose/position-source/: position-source.settings.yaml
docker-compose/postgres/: init.sh
docker-compose/redis/: redis.conf
docker-compose/redis-writer/: redis-writer.settings.yaml
docker-compose/secondary-redis/: secondary-redis.conf
docker-compose/secondary-valkey/: secondary-valkey.conf
docker-compose/streaming-server/: mediamtx.yml
docker-compose/video-source-py/: video-source-stream1.settings.yaml
helm/: README.md  do_release.sh
helm/sae/: .gitignore  .helmignore  Chart.yaml  customvalues.template.yaml  values.yaml
nvidia/: README.md  demo.yaml  notes.md  nvidia-device-plugin.values.yaml
tests/: .gitignore  pyproject.toml
tests/sae-tests/: test_pipeline.py
tools/: .gitignore  README.md  common.py  echo.py  gen-test-certs.sh  geo-mapper-visualizer.ipynb  play.py  record.py  requirements.txt  watch.py
tools/cameras/: .gitignore  apply_mask.py  plot-trajectories.py  requirements.txt
tools/geo-mapping/: .gitignore  CameraFit.py  README.md  autocameratransform.py  autofit.yaml  mapping-util.ipynb  requirements.txt
tools/gps-simulator/: README.md  main.py  pyproject.toml
tools/gps-smoothing/: .gitignore  gps-smoothing.ipynb  pyproject.toml
tools/gpsd-container/: Dockerfile  docker_build.sh  (+1 more)
tools/sae-introspection/: README.md  common.py  echo.py  geo-mapper-visualizer.ipynb  inspect_stream.py  play.py  plot-gps-log.ipynb  plot.py  pyproject.toml  record.py  requirements.txt  stats.py  watch.py
tools/test-video-source/: README.md  main.py  pyproject.toml
(+52 files in other folders)
