[project]
name = "sae-tests"
version = "0.1.0"
description = ""
authors = [{ name = "flonix8", email = "flstanek@googlemail.com" }]
license = { text = "AGPLv3" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = []

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
testcontainers = {extras = ["redis"], version = "^4.10.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
