[project]
name = "sae-introspection"
version = "0.1.0"
description = ""
authors = [
    {name = "flonix8",email = "flstanek@googlemail.com"}
]
readme = "README.md"

requires-python = ">=3.12,<4.0"
dependencies = [
    "simple-term-menu (>=1.6.6,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pybase64 (>=1.4.1,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "turbojpeg (>=0.0.2,<0.0.3)",
    "requests (>=2.32.4,<3.0.0)",
    "numpy (>=2.2.0,<3.0.0)",
    "protobuf (>=6.31.1,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pynmeagps (>=1.0.50,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
