[project]
name = "test-video-source"
version = "0.1.0"
description = ""
authors = [
    {name = "flonix8",email = "flstanek@googlemail.com"}
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
opencv-python = ">=3,<5.0.0.0"
pynmeagps = ">=1.0.50,<2.0.0"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.4.0" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.14.0" }
pyturbojpeg = "^1.8.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
